[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_taffy = { path = "./../../" }
eframe = { version = "0.32" }
wasm-bindgen-futures = { version = "0.4" }

[patch.crates-io]
# Taffy improvements that have not been released yet
# taffy = { git = "https://github.com/PPakalns/taffy", rev = "430ea480cb07e2a264f2edb374bd05c75f1b76e3" }
